--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "bin": "dist/index.js",
+  "type": "module",
   "scripts": {
     "ts:dev": "ts-node src/index.ts",
     "tsc:dev": "node dist/index.js",
@@ -15,11 +16,7 @@
     "esbuild:dev": "esbuild --watch",
     "esbuild:build": "node esbuild.js",
 
-    "pkg:build_comment": "pkg . --out-path build",
-    "pkg:build": "npm run esbuild:build && pkg dist/esbuild/index.js --out-path dist/pkg --options max_old_space_size=4096",
-    "pkg:dev:win": "npm run esbuild:build && dist/pkg/express-ts-demo-win.exe",
-    "pkg:dev:linux": "npm run esbuild:build && dist/pkg/express-ts-demo-linux",
-    "pkg:dev:macos": "bnpm run esbuild:build && dist/pkg/express-ts-demo-macos",
+    "sea:build": "npm run tsc:build && node --experimental-sea-config sea-config.json",
 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,18 +29,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "esbuild": "^0.25.1",
-    "pkg": "^5.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "vite": "^6.2.2"
-  },
-  "pkg": {
-    "scripts": "dist/**/*.js",
-    "assets": "package.json",
-    "targets": [
-      "node14",
-      "node16",
-      "node18"
-    ]
   }
 }
